--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,5 +28,5 @@ jobs:
     - name: Test with unittest
       run: |
         # for testing external process 
-        apt-get install -y cowsay
+        sudo apt-get install -y cowsay
         python -m unittest
