--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    
+
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.9
@@ -25,8 +25,14 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with unittest
+    - name: CLI Test
       run: |
-        # for testing external process 
+        # for testing external process
         sudo apt-get install -y cowsay
-        python -m unittest
+        python -m unittest tests/test_cli.py
+    - name: Parser Test
+      run: |
+        python -m unittest tests/test_parser.py
+    - name: Expanser Test
+      run: |
+        python -m unittest tests/test_expansion.py
