--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,3 +36,10 @@ jobs:
     - name: Expanser Test
       run: |
         python -m unittest tests/test_expansion.py
+    - name: Codecov Report
+      run: |
+        pip install coverage
+        coverage run -m unittest
+    - name: Upload Coverage to Codecov
+      uses: codecov/codecov-action@v1
+      with:
