--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
         pip install coverage
         coverage run -m unittest
     - name: Upload coverage to Codecov
-      uses: codecov/codecov-actions@v1
+      uses: codecov/codecov-action@v1
       with:
         flags: unittests
         fail_ci_if_error: true
