ci: fix codecov

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,8 @@ jobs:
     - name: 'generate report'
       run: |
         pip install coverage
-        coverage run -m unittest
+        python -m coverage run -m unittest
+        python -m codecov
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1.0.7
       with:
