--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,15 +36,15 @@ jobs:
     - name: Expanser Test
       run: |
         python -m unittest tests/test_expansion.py
-    - name: 'generate report'
-      run: |
-        pip install coverage
-        pip install codecov
-        python -m coverage run -m unittest
-        python -m codecov
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v1.0.7
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
-        flags: unittests
-        fail_ci_if_error: true
+    # - name: 'generate report'
+    #   run: |
+    #     pip install coverage
+    #     pip install codecov
+    #     python -m coverage run -m unittest
+    #     python -m codecov
+    # - name: Upload coverage to Codecov
+    #   uses: codecov/codecov-action@v1.0.7
+    #   with:
+    #     token: ${{ secrets.CODECOV_TOKEN }}
+    #     flags: unittests
+    #     fail_ci_if_error: true
