ci: add errors test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,9 @@ jobs:
     - name: Expanser Test
       run: |
         python -m unittest tests/test_expansion.py
+    - name: Errors Test
+      run: |
+        python -m unittest tests/test_errors.py
     - name: 'generate report'
       run: |
         pip install coverage
